View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0031769 | Open CASCADE | OCCT:Application Framework | public | 2020-09-15 13:43 | 2020-12-02 17:13 |
Reporter | Assigned To | bugmaster | |||
Priority | normal | Severity | major | ||
Status | closed | Resolution | fixed | ||
Target Version | 7.5.0 | Fixed in Version | 7.5.0 | ||
Summary | 0031769: Application Framework - regression : can not initialize two kinds of application in one thread | ||||
Description | In draw pload ALL TOBJ produces OSD_Exception_ACCESS_VIOLATION | ||||
Steps To Reproduce | bugs caf bug31769 | ||||
Tags | No tags attached. | ||||
Test case number | bugs/caf/bug31769 | ||||
related to | 0029195 | closed | OCAF - ensure thread safety for different documents |
|
Branch CR31769 has been created by mpv. SHA-1: 6eb753ed8c76c8645fc0fd3d342c6f5cbbbd3f67 Detailed log of new commits: Author: mpv Date: Tue Sep 15 16:20:01 2020 +0300 0031769: Application Framework - regression : can not initialize two kinds of application in one thread |
|
Resolved. Please, review CR31769. http://jenkins-test-12.nnov.opencascade.com/view/CR31769-master-MPV/view/COMPARE/ |
|
Reviewed. |
|
Combination - OCCT branch : IR-2020-09-18 master SHA - b0b766826118f74b9857a932b8cec8c52a25c492 a206de37fbfa0bf71bd534ae47192bbec23b8522 Products branch : IR-2020-09-18 SHA - a6486d839da1ba1383ef6cc1a1a446a172f494c7 was compiled on Linux, MacOS and Windows platforms and tested in optimize mode. Number of compiler warnings: No new/fixed warnings Regressions/Differences/Improvements: No regressions/differences CPU differences: Debian80-64: OCCT Total CPU difference: 17528.97000000011 / 17378.390000000145 [+0.87%] Products Total CPU difference: 12127.32000000009 / 12079.540000000095 [+0.40%] Windows-64-VC14: OCCT Total CPU difference: 18862.703125 / 18898.921875 [-0.19%] Products Total CPU difference: 13314.828125 / 13329.21875 [-0.11%] Image differences : No differences that require special attention Memory differences : No differences that require special attention |
|
Branch CR31769 has been deleted by inv. SHA-1: 6eb753ed8c76c8645fc0fd3d342c6f5cbbbd3f67 |
Date Modified | Username | Field | Change |
---|---|---|---|
2020-09-15 13:43 |
|
New Issue | |
2020-09-15 13:43 |
|
Assigned To | => mpv |
2020-09-15 13:44 |
|
Relationship added | related to 0029195 |
2020-09-15 16:17 | git | Note Added: 0094855 | |
2020-09-16 08:33 |
|
Note Added: 0094896 | |
2020-09-16 08:33 |
|
Status | new => resolved |
2020-09-16 08:33 |
|
Steps to Reproduce Updated | |
2020-09-16 08:34 |
|
Assigned To | mpv => szy |
2020-09-16 12:22 |
|
Note Added: 0094903 | |
2020-09-16 12:22 |
|
Assigned To | szy => bugmaster |
2020-09-16 12:22 |
|
Status | resolved => reviewed |
2020-09-19 15:48 | bugmaster | Test case number | => bugs/caf/bug31769 |
2020-09-19 17:22 | bugmaster | Note Added: 0095082 | |
2020-09-19 17:22 | bugmaster | Status | reviewed => tested |
2020-09-20 10:55 | bugmaster | Changeset attached | => occt master ee3280a9 |
2020-09-20 10:55 | bugmaster | Status | tested => verified |
2020-09-20 10:55 | bugmaster | Resolution | open => fixed |
2020-09-20 11:13 | git | Note Added: 0095118 | |
2020-12-02 16:43 |
|
Fixed in Version | => 7.5.0 |
2020-12-02 17:13 |
|
Status | verified => closed |