0031769: Application Framework - regression : can not initialize two kinds of application in one thread